adds  CW#3 box module properties

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    Introduction
+    <a href="http://www.google.com" > Google
+        <img style="width: 20px" src= "https://cdn-icons-png.flaticon.com/512/2991/2991148.png" >
+
+    </a>
+    <a href="index1.html"> Another page
+        <img src="images/HTML page.png"style="width: 20px" >
+    </a>
+    <label style="text-align:center; display: inline-block; width: 500px; 
+    border: solid 5px black;margin-top: 40px;background-color: pink;padding: 40px;">Hello HTML</label>
     
     
 </body>
