Adding my personal links to htnl

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
         <img style="width: 20px" src= "https://cdn-icons-png.flaticon.com/512/2991/2991148.png" >
 
     </a>
-    <a href="index1.html"> Another page
+    <a href ="index1.html" style="text-align:center; display: inline-block; width: 1000px; "> Another page
         <img src="images/HTML page.png"style="width: 20px" >
+
     </a>
-    <label style="text-align:center; display: inline-block; width: 500px; 
+    <a href ="index1.html" style="text-align:center; display: inline; width: 1000px; "> Another page
+        <img src="images/HTML page.png"style="width: 20px" >
+    </a>    
+    <label style="text-align:center; display: list-item; width: 500px; 
     border: solid 5px black;margin-top: 40px;background-color: pink;padding: 40px;">Hello HTML</label>
     
     
