--- a/index1.html
+++ b/index1.html
@@ -9,26 +9,31 @@
 <label style="text-align:center; display: block; font-size: larger; ">My Profiles</label>
 <body>
     <a href="https://www.facebook.com/anton.sipko/" style="text-align:center; display: block; margin-left: auto;margin-right: auto; ">
-        <img src="images/Facebook-logo.png" style="width: 35px;"><label style="text-align:left; display: inline-block; ">My Facebook Profile</label>
+        <img src="images/Facebook-logo.png" style="width: 35px;">
+        <label style="text-align:left; display: inline-block;width: 510px; ">My Facebook Profile</label>
 
     </a>
     <a href="https://www.instagram.com/anton.sipko/" style="text-align:center; display: block; ">
-        <img src="images/ig-logo-png-instagram-social-outlined-logo-svg-png-icon-download-31.png" style ="width: 20px;"><label style="text-align:left; display: inline-block; ">My instagram Profile</label>
+        <img src="images/ig-logo-png-instagram-social-outlined-logo-svg-png-icon-download-31.png" style ="width: 20px;">
+        <label style="text-align:left; display: inline-block;width: 500px; ">My instagram Profile</label>
 
     </a>
     <a href="https://twitter.com/Toxasi1" style="text-align:center; display: block; ">
-        <img src="images/Twitter logo.png" style="width: 20px;"><label style="text-align:left; display: inline-block; ">My Twitter Profile</label>
+        <img src="images/Twitter logo.png" style="width: 20px;">
+        <label style="text-align:left; display: inline-block;width: 500px; ">My Twitter Profile</label>
 
     </a>  
     <a href="https://github.com/AntonSipko" style="text-align:center; display: block;">
-        <img src="https://www.clipartmax.com/png/small/165-1652795_i-hope-you-enjoyed-reviewing-the-project-github-svg.png" style="width: 25px;"><label style="text-align:left; display: inline-block; ">My Github Profile</label>
+        <img src="https://www.clipartmax.com/png/small/165-1652795_i-hope-you-enjoyed-reviewing-the-project-github-svg.png" style="width: 25px;">
+        <label style="text-align:left; display: inline-block;width: 500px; ">My Github Profile</label>
     </a>
     <a href="https://www.linkedin.com/in/anton-sipco-0773a11b3" style="text-align:center; display: block;">
-        <img src="images/new-linkedin-logo-white-black-png.png" style="width: 25px;"><label style="text-align:left; display: inline-block; ">My Linkedin</label>
+        <img src="images/new-linkedin-logo-white-black-png.png" style="width: 25px;">
+        <label style="text-align:left; display: inline-block;width: 500px; ">My Linkedin</label>
     </a>
 
   
     
     
 </body>
-</html>
+</html> 
