--- a/HW3/hasbullla-verse.html
+++ b/HW3/hasbullla-verse.html
@@ -14,8 +14,10 @@
     </header>
     <main class="main-class">
         <section class="details-container">
+           <div class="details-frame">
             <img src="images-hasbulla/tjb6brh82ix91.webp" class="details-image">
             <span class="details-title">Hasbulla as Buzz Lightyear</span>
+           </div>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
