--- a/HW3/hasbullla-verse.html
+++ b/HW3/hasbullla-verse.html
@@ -21,7 +21,8 @@
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/22ygxa8j8xz91"
+                data-details-title="Hasbulla as Frodo Baggins">
                     <img src="images-hasbulla/22ygxa8j8xz91.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as Frodo Baggins</span>
 
@@ -29,7 +30,8 @@
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/4ax7zvjmhmx91.jpg"
+                data-details-title="Hasbulla as a peaky blinder">
                     <img src="images-hasbulla/4ax7zvjmhmx91.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a peaky blinder</span>
 
@@ -37,7 +39,8 @@
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/9q8haxp1000a1.jpg"
+                data-details-title="Hasbulla as a Sith">
                     <img src="images-hasbulla/9q8haxp1000a1.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a Sith</span>
 
@@ -45,7 +48,8 @@
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/b4ppzl216p0a1.jpg"
+                data-details-title="Hasbulla Mask">
                     <img src="images-hasbulla/b4ppzl216p0a1.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla Mask</span>
 
@@ -53,7 +57,8 @@
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/o2lv1c0dpby91.jpg"
+                data-details-title="Hasbulla White in Breaking Bad">
                     <img src="images-hasbulla/o2lv1c0dpby91.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla White in Breaking Bad</span>
 
@@ -63,6 +68,7 @@
 
         </ul>
     </main>
+    <script src="src/Hasbulla.js"></script>
 
 </body>
 </html>
