Adding hide button+restyling fpictures directions

--- a/HW3/hasbullla-verse.html
+++ b/HW3/hasbullla-verse.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +9,23 @@
     <link rel="stylesheet" href="hasbula.css">
     <title>Hasbulla-Gallery</title>
 </head>
+
 <body>
     <header class="logo">
         <h2>Hasbik-verse</h2>
     </header>
-    <main class="main-class">
-        <section class="details-container">
-           <div class="details-frame">
-            <img src="images-hasbulla/tjb6brh82ix91.webp" class="details-image">
-            <span class="details-title">Hasbulla as Buzz Lightyear</span>
-           </div>
+    <main class="main-class ">
+        <section class="details-container ">
+            <div class="details-frame">
+                <button id="hide-button" onclick="hideDetails()">X</button>
+                <img src="images-hasbulla/tjb6brh82ix91.webp" class="details-image">
+                <span class="details-title">Hasbulla as Buzz Lightyear</span>
+            </div>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/22ygxa8j8xz91"
-                data-details-title="Hasbulla as Frodo Baggins">
+                <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/22ygxa8j8xz91.jpg"
+                    data-details-title="Hasbulla as Frodo Baggins">
                     <img src="images-hasbulla/22ygxa8j8xz91.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as Frodo Baggins</span>
 
@@ -31,7 +34,7 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/4ax7zvjmhmx91.jpg"
-                data-details-title="Hasbulla as a peaky blinder">
+                    data-details-title="Hasbulla as a peaky blinder">
                     <img src="images-hasbulla/4ax7zvjmhmx91.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a peaky blinder</span>
 
@@ -40,7 +43,7 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/9q8haxp1000a1.jpg"
-                data-details-title="Hasbulla as a Sith">
+                    data-details-title="Hasbulla as a Sith">
                     <img src="images-hasbulla/9q8haxp1000a1.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a Sith</span>
 
@@ -49,7 +52,7 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/b4ppzl216p0a1.jpg"
-                data-details-title="Hasbulla Mask">
+                    data-details-title="Hasbulla Mask">
                     <img src="images-hasbulla/b4ppzl216p0a1.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla Mask</span>
 
@@ -58,7 +61,7 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/o2lv1c0dpby91.jpg"
-                data-details-title="Hasbulla White in Breaking Bad">
+                    data-details-title="Hasbulla White in Breaking Bad">
                     <img src="images-hasbulla/o2lv1c0dpby91.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla White in Breaking Bad</span>
 
@@ -71,4 +74,5 @@
     <script src="src/Hasbulla.js"></script>
 
 </body>
+
 </html>
