--- a/HW3/hasbullla-verse.html
+++ b/HW3/hasbullla-verse.html
@@ -18,15 +18,19 @@
         <section class="details-container ">
             <div class="details-frame">
                 <button id="hide-button" onclick="hideDetails()">X</button>
-                <img src="images-hasbulla/tjb6brh82ix91.webp" class="details-image">
+                <audio id="audio" src="audios/buzz.mp3"></audio>
+                <img src="images-hasbulla/tjb6brh82ix91.webp" onclick="play()" class="details-image">
                 <span class="details-title">Hasbulla as Buzz Lightyear</span>
             </div>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
+                <audio id="audio" src="audios/buzz.mp3">
+                </audio>
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/22ygxa8j8xz91.jpg"
-                    data-details-title="Hasbulla as Frodo Baggins">
-                    <img src="images-hasbulla/22ygxa8j8xz91.jpg" class="thumbnails-image">
+                    data-details-title="Hasbulla as Frodo Baggins" data-details-audio="audios/frodo!-someone-at-the-door.mp3">
+                    <audio id="audio" src="audios/frodo!-someone-at-the-door.mp3"></audio>
+                    <img src="images-hasbulla/22ygxa8j8xz91.jpg" onclick="play()" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as Frodo Baggins</span>
 
                 </a>
@@ -34,8 +38,9 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/4ax7zvjmhmx91.jpg"
-                    data-details-title="Hasbulla as a peaky blinder">
-                    <img src="images-hasbulla/4ax7zvjmhmx91.jpg" class="thumbnails-image">
+                    data-details-title="Hasbulla as a peaky blinder" data-details-audio="audios/My name is Thomas Shelby and today Im gonna kill a man.mp3">
+                    <audio id="audio" src="audios/My name is Thomas Shelby and today Im gonna kill a man.mp3"></audio>
+                    <img src="images-hasbulla/4ax7zvjmhmx91.jpg" onclick="play()" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a peaky blinder</span>
 
                 </a>
@@ -43,8 +48,9 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/9q8haxp1000a1.jpg"
-                    data-details-title="Hasbulla as a Sith">
-                    <img src="images-hasbulla/9q8haxp1000a1.jpg" class="thumbnails-image">
+                    data-details-title="Hasbulla as a Sith"  data-details-audio="audios/lightsaber-ignition-6816.mp3" >
+                    <audio id="audio" src="audios/lightsaber-ignition-6816.mp3"></audio>
+                    <img src="images-hasbulla/9q8haxp1000a1.jpg" onclick="play()" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a Sith</span>
 
                 </a>
@@ -52,7 +58,7 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/b4ppzl216p0a1.jpg"
-                    data-details-title="Hasbulla Mask">
+                    data-details-title="Hasbulla Mask" >
                     <img src="images-hasbulla/b4ppzl216p0a1.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla Mask</span>
 
@@ -61,8 +67,9 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/o2lv1c0dpby91.jpg"
-                    data-details-title="Hasbulla White in Breaking Bad">
-                    <img src="images-hasbulla/o2lv1c0dpby91.jpg" class="thumbnails-image">
+                    data-details-title="Hasbulla White in Breaking Bad"  data-details-audio="audios/heisenberg-youre-goddamn-right-walter-white-say-my-name-breaking-bad-season-5.mp3" >
+                    <audio id="audio" src="audios/heisenberg-youre-goddamn-right-walter-white-say-my-name-breaking-bad-season-5.mp3"></audio>
+                    <img src="images-hasbulla/o2lv1c0dpby91.jpg" onclick="play()" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla White in Breaking Bad</span>
 
                 </a>
