--- a/HW3/hasbullla-verse.html
+++ b/HW3/hasbullla-verse.html
@@ -19,7 +19,7 @@
             <div class="details-frame">
                 <button id="hide-button" onclick="hideDetails()">X</button>
                 <audio id="audio" src="audios/buzz.mp3"></audio>
-                <img src="images-hasbulla/tjb6brh82ix91.webp" onclick="play()" class="details-image">
+                <img src="images-hasbulla/tjb6brh82ix91.webp"  class="details-image">
                 <span class="details-title">Hasbulla as Buzz Lightyear</span>
             </div>
         </section>
@@ -30,7 +30,7 @@
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/22ygxa8j8xz91.jpg"
                     data-details-title="Hasbulla as Frodo Baggins" data-details-audio="audios/frodo!-someone-at-the-door.mp3">
                     <audio id="audio" src="audios/frodo!-someone-at-the-door.mp3"></audio>
-                    <img src="images-hasbulla/22ygxa8j8xz91.jpg" onclick="play()" class="thumbnails-image">
+                    <img src="images-hasbulla/22ygxa8j8xz91.jpg"  class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as Frodo Baggins</span>
 
                 </a>
@@ -40,7 +40,7 @@
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/4ax7zvjmhmx91.jpg"
                     data-details-title="Hasbulla as a peaky blinder" data-details-audio="audios/My name is Thomas Shelby and today Im gonna kill a man.mp3">
                     <audio id="audio" src="audios/My name is Thomas Shelby and today Im gonna kill a man.mp3"></audio>
-                    <img src="images-hasbulla/4ax7zvjmhmx91.jpg" onclick="play()" class="thumbnails-image">
+                    <img src="images-hasbulla/4ax7zvjmhmx91.jpg"  class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a peaky blinder</span>
 
                 </a>
@@ -50,7 +50,7 @@
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/9q8haxp1000a1.jpg"
                     data-details-title="Hasbulla as a Sith"  data-details-audio="audios/lightsaber-ignition-6816.mp3" >
                     <audio id="audio" src="audios/lightsaber-ignition-6816.mp3"></audio>
-                    <img src="images-hasbulla/9q8haxp1000a1.jpg" onclick="play()" class="thumbnails-image">
+                    <img src="images-hasbulla/9q8haxp1000a1.jpg"  class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla as a Sith</span>
 
                 </a>
@@ -69,7 +69,7 @@
                 <a class="thumbnails-anchor" href="#" data-details-image="images-hasbulla/o2lv1c0dpby91.jpg"
                     data-details-title="Hasbulla White in Breaking Bad"  data-details-audio="audios/heisenberg-youre-goddamn-right-walter-white-say-my-name-breaking-bad-season-5.mp3" >
                     <audio id="audio" src="audios/heisenberg-youre-goddamn-right-walter-white-say-my-name-breaking-bad-season-5.mp3"></audio>
-                    <img src="images-hasbulla/o2lv1c0dpby91.jpg" onclick="play()" class="thumbnails-image">
+                    <img src="images-hasbulla/o2lv1c0dpby91.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Hasbulla White in Breaking Bad</span>
 
                 </a>
