--- a/wordle/index.html
+++ b/wordle/index.html
@@ -12,8 +12,7 @@
         <h3 class="logo">Wordle Game</h3>
     
     </header>
-    <input class="guess-input" type="text" onchange="onChange()"
-    placeholder="Enter the word" >
+        <input class="guess-input" type="text" onchange="onChange()" placeholder="Enter the word" >
     <section class="guess-letters">
 
     </section>
