--- a/movies-gallery/Movies-gallery.html
+++ b/movies-gallery/Movies-gallery.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icons/free-movie-icon-2802-thumb (1).png" type="image/x-icon">
-    <link rel="stylesheet" href="hasbula.css">
+    <link rel="stylesheet" href="Movies-gallery.css">
     <title>Movies-gallery</title>
 </head>
 
@@ -26,7 +26,7 @@
 
         </ul>
     </main>
-    <script src="src/Hasbulla.js"></script>
+    <script src="src/Movies-gallery.js"></script>
 
 </body>
 
